--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+  <link rel="icon" type="image/png" href="img/imagemGato.png"/>
   <title>Jogo</title>
 
   <link rel="stylesheet" type="text/css" href="style.css">
