adicionando setas mobile

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" href="img/imagemGato.png"/>
+  <link rel="icon" type="image/png" href="img/imagemGato.png" />
   <title>Jogo</title>
 
   <link rel="stylesheet" type="text/css" href="style.css">
@@ -26,10 +26,12 @@
       <script src="ator.js"></script>
       <script src="carros.js"></script>
       <script src="p5.collide2d.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/addons/p5.dom.min.js">
+      </script>
     </section>
     <section class="dificuldades">
 
-  </section>
+    </section>
   </main>
   <footer class="rodape">
   </footer>
